--- a/scene/one/book-of-ella-3-2/index.html
+++ b/scene/one/book-of-ella-3-2/index.html
@@ -152,6 +152,9 @@
 
       </div>
 
+      <img alt="Garfield &ndash; (February 19, 2009) &copy; Jim Davis" src="../../../inc/img/01/comic/jim-davis/garfield.2009.02.19.gif" />
+      <p class="gutter-side text-right lineend"><em>Garfield</em> (February 19, 2009) &copy; Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
+
       <div class="clear">
         <div id="register-toggle">
           <h3><a onclick="toggle_register();">&plus;</a></h3>
@@ -175,9 +178,6 @@
 
         </div>
       </div>
-
-      <img alt="Garfield &ndash; (February 19, 2009) &copy; Jim Davis" src="../../../inc/img/01/comic/jim-davis/garfield.2009.02.19.gif" />
-      <p class="gutter-side text-right"><em>Garfield</em> (February 19, 2009) &copy; Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
