--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.one.png" />
+  <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.light.png" />
 
   <style>
     html { background-color:#222; }
@@ -24,13 +24,13 @@
 
 </head>
 
-<body class="single" id="scene-one">
+<body class="single" id="dark">
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Northern White Rhinoceros</em></a></li>
+      <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb btn dark"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene dark"><a><em>Northern White Rhinoceros</em></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2022</h4>
-        <h2 class="scene-one">Northern White Rhinoceros</h2>
+        <h2 class="dark">Northern White Rhinoceros</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
         <p class="linebreak"><em>One of the more incomprehensible acts that we humans, as a species, have to face up to is the extirpation of a once thriving group of animals, such as the northern white rhinoceros. Once upon a time&hellip; there were thousands of this subspecies living across Africa. The crisis of poaching that has supplied an illegal trade in rhino horn has made the plight of the northern white rhinoceros particularly devastating.</em></p>
@@ -46,7 +46,7 @@
         <!-- Two years after I painted a rhinoceros at N'gorongoro for my international baccalaureate art show&hellip;  -->
 
         <h3 class="linebreak">The Last Northern White Rhinoceros</h3>
-        <p>In 2009, a last chapter was written for the northern white rhinoceros. There were just eight left. They were all in zoos and there was this idea to fly two males and two females back to Kenya in a last ditch effort to save the subspecies. Both black and white rhinoceros have been driven to the brink of extinction. For the northern white subspecies, extinction is now only a matter of time. When Suni passed away in 2014, Sudan was the last male northern white rhinoceros. This chapter ended at Ol Pejeta Conservancy in 2018 when Sudan died surrounded by people who loved him after suffering from age-related complications. Sudan was 45.<sup>&nbsp;[<a class="button" onclick="fn();" title="Sam Anderson, 2021.">1</a>]</sup></p>
+        <p>In 2009, a last chapter was written for the northern white rhinoceros. There were just eight left. They were all in zoos and there was this idea to fly two males and two females back to Kenya in a last ditch effort to save the subspecies. Both black and white rhinoceros have been driven to the brink of extinction. For the northern white subspecies, extinction is now only a matter of time. When Suni passed away in 2014, Sudan was the last male northern white rhinoceros. This chapter ended at Ol Pejeta Conservancy in 2018 when Sudan died surrounded by people who loved him after suffering from age-related complications. Sudan was 45.<sup>&nbsp;[<a class="button" onclick="fn();" title="Ami Vitale, 2019.">1</a>]</sup></p>
 
       </div>
 
@@ -64,7 +64,7 @@
       </div>
 
       <div>
-        <p>Ami Vitale, Nikon Ambassador and National Geographic photo-journalist, was interviewed by Dibblex Lesalon on his podcast <em>Boots on the Ground</em> in September 2021 about her photographs of Sudan before his death. Vitale pointed to how Kenya has been doing a lot of things right. In many ways, Kenya has been a leader when you look at conservation, with the government committing to conservation and with the community coming to see value in conservation and so on. &ldquo;There are challenges and a lot of missteps,&rdquo; Vitale  to Lesalon, &ldquo;but there also a lot of great lessons to be learned&mdash;there is so much noise in the world, this is a really good time for all of us to take a moment and be quiet&hellip; And listen. Truly listen.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Ami Vitale, 2021.">2</a>]</sup></p>
+        <p>Ami Vitale, Nikon Ambassador and National Geographic photo-journalist, was interviewed by Dibblex Lesalon on the Kenya-based podcast <em>Boots on the Ground</em> in September 2021, where she was asked to share the story behind her photographs of Sudan before his death. Vitale has documented a number of wildlife conservation stories in Kenya, perhaps most notably her short film <em>Shaba</em> (2021) tells the story of an elephant in a way to support the foundation of Reteti Elephant Sanctuary. In the interview with Lesalon, Vitale spoke about how Kenya has been doing a lot of things right. She has seen some of the many ways Kenya has been a leader when you look at conservation, with the government committing to conservation and with the community coming together to see value in conservation and so on. &ldquo;There are challenges and a lot of missteps,&rdquo; Vitale acknowledged, &ldquo;but there are also a lot of great lessons to be learned&mdash;there is so much noise in the world, this is a really good time for all of us to take a moment and be quiet&hellip; And listen. Truly listen.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Shaba, 2021.">2</a>]</sup></p>
 
       </div>
 
@@ -98,8 +98,8 @@
 
       </div>
 
-      <iframe src="https://player.vimeo.com/video/271847987?color=ffcf60&title=0&byline=0&portrait=0" class="video" frameborder="0" allow="accelerometer; autoplay; fullscreen; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p class="text-right gutter-side">&ldquo;Saving The Last Northern White Rhino&rdquo; 360 VR &copy; Black Bean [<a href="../../url/vimeo/blackbean/" rel="noopener" target="_blank" title="Vimeo / Black Bean">vimeo.com</a>]</p>
+      <iframe src="https://player.vimeo.com/video/271847987?color=ffcf60&title=0&byline=0&portrait=0&quality=1080p" class="video" frameborder="0" allow="accelerometer; autoplay; fullscreen; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p class="text-right gutter-side">&ldquo;Saving The Last Northern White Rhino&rdquo; 360 VR &copy; Black Bean [<a href="../../url/vimeo/blackbean-271847987/" rel="noopener" target="_blank" title="Vimeo / Black Bean / Saving The Last Northern White Rhino 360 VR">vimeo.com</a>]</p>
 
       <div>
         <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. Still some scientists have not given up.</p>
@@ -114,8 +114,9 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Sam Anderson. The Last Two Northern White Rhinos On Earth: What will we lose when Najin and Fatu die? New York Times. 2021. <a href="../../../url/www/nytimes-the-last-two-northern-white-rhinos-on-earth/" title="New York Times / The Last Two Northern White Rhinos On Earth" target="_blank" rel="noopener">Website Link</a></p>
-        <p class="small"><sup>2</sup> Ami Vitale. The Last Goodbye. 2019. <a href="../../../url/www/amivitale-goodbye-sudan/" title="Ami Vitale / The Last Goodbye" target="_blank" rel="noopener">Website Link</a></p>
+        <!-- <p class="small"><sup>1</sup> Sam Anderson. The Last Two Northern White Rhinos On Earth: What will we lose when Najin and Fatu die? New York Times. 2021. <a href="../../../url/www/nytimes-the-last-two-northern-white-rhinos-on-earth/" title="New York Times / The Last Two Northern White Rhinos On Earth" target="_blank" rel="noopener">Website Link</a></p> -->
+        <p class="small"><sup>1</sup> Ami Vitale. The Last Goodbye. 2019. <a href="../../../url/www/amivitale-goodbye-sudan/" title="Ami Vitale / The Last Goodbye" target="_blank" rel="noopener">Website Link</a></p>
+        <p class="small"><sup>2</sup> Reteti Elephant Sanctuary. <em>Shaba</em>, a short film by Ami Vitale. 2021. <a href="../../../url/-org/shabafilm/" title="Ami Vitale / Shaba (documentary film, 2021)" target="_blank" rel="noopener">Website Link</a></p>
         <p class="small"><sup>3</sup> IUCN Red List. Conservation efforts bring cautious hope for African rhinos. IUCN. March 2020. <a href="../../../url/-org/iucn-conservation-efforts-bring-cautious-hope-african-rhinos/" title="." target="_blank" rel="noopener">Website Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;These Two Rhinos Are The Last Of Their Kind.&rsquo; BBC Earth. 2019. <a href="../../../url/yt/Q8eh58Z249o/" title="YouTube / BBC Earth / Seven Worlds, One Planet: These Two Rhinos Are The Last Of Their Kind." target="_blank" rel="noopener">Video Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;Living on the brink&rsquo; BBC Earth. 2019. <a href="../../../url/www/bbcearth-living-on-the-brink/" title="BBC Earth / Seven Worlds, One Planet: Living on the brink." target="_blank" rel="noopener">Website Link</a></p>
