--- a/support/index.html
+++ b/support/index.html
@@ -35,7 +35,7 @@
       <div>
         <h4 class="letterhead thin">Animat Habitat</h4>
         <h2>Sitemap<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web</font></h2>
-        <h5>animathabitat.com &middot; animathabitat.org</h5>
+        <h5>animathabitat.ca &middot; animathabitat.com &middot; animathabitat.org</h5>
 
       </div>
 
