--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -13,14 +13,14 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#333; }
+  </style>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.light.png" />
-
-  <style>
-    html { background-color:#222; }
-  </style>
 
 </head>
 
@@ -29,7 +29,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb btn dark"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn dark"><a href="../" title="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro.">0</a></li>
       <li class="crumb scene dark"><a><em>Northern White Rhinoceros</em></a></li>
     </ul>
   </nav>
